# walkthrough

./: CLAUDE.md  Cargo.toml  README.md  walkthrough-replace-difft.md
.claude/skills/walkthrough/: SKILL.md
.playwright-cli/: page-2026-03-12T19-21-38-523Z.yml  page-2026-03-12T21-59-10-032Z.yml
src/: collect.rs  difft_json.rs  main.rs  publish.rs  render.rs  verify.rs
test_fixtures/3853c02/: SUMMARY.md  services__agentplat__stream-protocol__src__types.ts.json  services__agentplat__ts-client__src__client.ts.json  services__cortex__lib__statsig__flags.ts.json  services__cortex__lib__support__foundry_api.ts.difft.txt  services__cortex__lib__support__foundry_api.ts.json  services__cortex__package.json.json
test_fixtures/43c4eb2/: SUMMARY.md  services__agentplat__sbox__sboxd__internal__session__manager.go.difft.txt  services__agentplat__sbox__sboxd__internal__session__manager.go.json
test_fixtures/4403693/: CLAUDE.md.json  SUMMARY.md  src__render.rs.json
test_fixtures/bb64043/: SUMMARY.md  src__render.rs.difft.txt  src__render.rs.json
test_fixtures/dup-context/: multiplayer__multiplayer__src__dirty_document_checkpoints.rs.json
test_fixtures/inter-hunk-gap/: services__agentplat__sbox__sboxd__internal__workspace__manager.go.json
test_fixtures/intra-chunk-gap/: services__agentplat__sbox__sboxd__internal__workspace__manager.go.json
test_fixtures/jumbled-old-lines/: services__agentplat__sbox__sboxd__internal__workspace__manager.go.json
test_fixtures/low-similarity-pairs/: services__agentplat__sbox__sboxd__internal__workspace__manager.go.json
(+2 files in other folders)
