[package]
name = "walkthrough"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "walkthrough"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
two-face = "0.5"
